Nginx config completed.

--- a/Demo/src/main/resources/application.properties
+++ b/Demo/src/main/resources/application.properties
@@ -1,7 +1,15 @@
 server.servlet.context-path=/api/v1
 
+# Setup HTTPS
+server.port=8080
+server.ssl.enabled=true
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=classpath:keystore/auth.p12
+server.ssl.key-alias=auth
+server.ssl.key-store-password=authpasswd97#
+
 #use gateway authentication
-gateway.security.api=https://localhost:8443
+gateway.security.api=https://localhost
 gateway.security.disable-ssl-checks=true
 
 # H2 in memory DB
