API Key auth added to Nginx.

--- a/nginx.conf
+++ b/nginx.conf
@@ -32,8 +32,19 @@ http {
 
     #gzip  on;
 	
-	upstream api_server {
-		server iana.org;
+	#upstream api_server {
+	#	server iana.org;
+	#}
+
+	map_hash_max_size 262;
+	map_hash_bucket_size 262;
+	
+	map $http_ApiKey $api_client_name {
+		default "";
+
+		"7B5zIqmRGXmrJTFmKa99vcit" "client_one";
+		"QzVV6y1EmQFbbxOfRCwyJs35" "client_two";
+		"mGcjH8Fv6U9y3BVF9H3Ypb9T" "client_six";
 	}
 
     server {
@@ -60,7 +71,21 @@ http {
 		}
 		
 		location /apps/ {
+			auth_request /_validate_apikey;
 			proxy_pass        https://localhost:8080/api/v1/;
+		}
+		
+		location = /_validate_apikey {
+			internal;
+
+			if ($http_ApiKey = "") {
+				return 401; # Unauthorized
+			}
+			if ($api_client_name = "") {
+				return 403; # Forbidden
+			}
+
+			return 204; # OK (no content)
 		}
 
         #error_page  404              /404.html;
